# bruno-llm

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  COMPATIBILITY_REPORT.md  CONTRIBUTING.md  GITHUB_RELEASE.md  IMPLEMENTATION_PLAN.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_v0.2.0.md  TESTING.md  index.html  mkdocs.yml  objects.inv  project-overview.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  task-1.md  task-overview.md
.github/: copilot-instructions.md
.github/workflows/: docs.yml  lint.yml  publish.yml.disabled  test.yml
PRE_COMMIT_SETUP/: index.html
USER_GUIDE/: index.html
about/changelog/: index.html
about/license/: index.html
api/API_REFERENCE/: index.html
api/EMBEDDING_GUIDE/: index.html
api/OLLAMA_PROVIDER/: index.html
api/OPENAI_PROVIDER/: index.html
api/base/: index.html
api/exceptions/: index.html
api/factory/: index.html
api/providers/: index.html
bruno_llm/: __init__.py  __version__.py  embedding_factory.py  exceptions.py  factory.py
bruno_llm/base/: __init__.py  base_provider.py  cache.py  context.py  cost_tracker.py  embedding_interface.py  middleware.py  rate_limiter.py  retry.py  streaming.py  token_counter.py
bruno_llm/providers/: __init__.py
bruno_llm/providers/ollama/: __init__.py  config.py  embedding_provider.py  provider.py
bruno_llm/providers/openai/: __init__.py  config.py  embedding_provider.py  provider.py
bruno_llm/utils/: __init__.py
development/contributing/: index.html
development/pre-commit/: index.html
development/testing/: index.html
docs/: PRE_COMMIT_SETUP.md  USER_GUIDE.md  index.md
docs/about/: changelog.md  license.md
docs/api/: API_REFERENCE.md  EMBEDDING_GUIDE.md  OLLAMA_PROVIDER.md  OPENAI_PROVIDER.md  base.md  exceptions.md  factory.md  providers.md
docs/development/: contributing.md  pre-commit.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/how-to/: create-release-branch-steps.md
docs/releases/: GITHUB_RELEASE.md
docs/user-guide/: overview.md
docs/user-guide/advanced/: caching.md  context.md  cost-tracking.md  middleware.md  streaming.md
docs/user-guide/providers/: ollama.md  openai.md
examples/: advanced_features.py  basic_usage.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
how-to/create-release-branch-steps/: index.html
releases/GITHUB_RELEASE/: index.html
releases/RELEASE_CHECKLIST_v0.2.0/: index.html
search/: search_index.json
tests/: conftest.py  test_bruno_core_compatibility.py  test_cache.py  test_context.py  test_cost_tracker.py  test_cost_tracker_enhanced.py  test_embedding_integration.py  test_embedding_validation.py  test_exceptions.py  test_factory.py  test_integration.py  test_middleware.py  test_rate_limiter.py  test_retry.py  test_streaming.py  test_token_counter.py
tests/providers/: conftest.py  test_ollama.py  test_ollama_embedding.py  test_openai.py  test_openai_embedding.py
user-guide/advanced/caching/: index.html
user-guide/advanced/context/: index.html
user-guide/advanced/cost-tracking/: index.html
user-guide/advanced/middleware/: index.html
user-guide/advanced/streaming/: index.html
user-guide/overview/: index.html
user-guide/providers/ollama/: index.html
user-guide/providers/openai/: index.html
