[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bruno-llm"
version = "0.2.0"
description = "LLM and embedding provider implementations for bruno-core framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Meggy AI", email = "contact@meggy.ai"}
]
maintainers = [
    {name = "Meggy AI", email = "contact@meggy.ai"}
]
keywords = [
    "llm",
    "ai",
    "assistant",
    "openai",
    "ollama",
    "bruno",
    "chatbot",
    "language-model",
    "embeddings",
    "semantic-search",
    "rag",
    "vector-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "bruno-core>=0.1.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "numpy>=1.21.0",  # Vector operations for embeddings
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",  # HuggingFace sentence transformers
    "scikit-learn>=1.0.0",          # Additional similarity metrics
    "openai>=1.0.0",               # OpenAI embedding API (external library)
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.3.0",
    "black>=23.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]
all = [
    "bruno-llm[openai,embeddings,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/meggy-ai/bruno-llm"
Documentation = "https://meggy-ai.github.io/bruno-llm/"
Repository = "https://github.com/meggy-ai/bruno-llm"
Issues = "https://github.com/meggy-ai/bruno-llm/issues"
Changelog = "https://github.com/meggy-ai/bruno-llm/blob/main/CHANGELOG.md"

[project.entry-points."bruno.llm_providers"]
ollama = "bruno_llm.providers.ollama:OllamaProvider"
openai = "bruno_llm.providers.openai:OpenAIProvider"

[tool.setuptools]
packages = [
    "bruno_llm",
    "bruno_llm.base",
    "bruno_llm.providers",
    "bruno_llm.providers.ollama",
    "bruno_llm.providers.openai",
    "bruno_llm.utils"
]

[tool.setuptools.package-data]
bruno_llm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=bruno_llm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-m", "not wip",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "wip: marks tests as work-in-progress (deselect with '-m \"not wip\"')",
]

[tool.coverage.run]
source = ["bruno_llm"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
follow_imports = "silent"
ignore_missing_imports = true
pretty = true
disable_error_code = ["misc", "assignment", "return-value", "attr-defined", "arg-type", "operator"]

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "tiktoken.*",
    "bruno_core.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bruno_llm", "bruno_core"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
